--- a/proyecto sistema sabanas/menu/navbar.html
+++ b/proyecto sistema sabanas/menu/navbar.html
@@ -71,6 +71,6 @@
                 <div class="p2_perfil" id="nombre-usuario">Cargando...</div>
             </a>
         </li>
-        <li><a href="cerrar_sesion.php" class="cerrar-sesion">Cerrar Sesión</a></li>
+        <li><a href="/../TALLER DE ANALISIS Y PROGRAMACIÓN I/proyecto sistema sabanas/menu/cerrar_sesion.php" class="cerrar-sesion">Cerrar Sesión</a></li>
     </ul>
 </nav>
