--- a/proyecto sistema sabanas/menu/navbar.html
+++ b/proyecto sistema sabanas/menu/navbar.html
@@ -44,6 +44,8 @@
             <div class="dropdown-content">
                 <a href="/TALLER DE ANALISIS Y PROGRAMACIÓN I/proyecto sistema sabanas/menu/tabla_notas.html">Nota
                     Debito Credito</a>
+                <a href="/TALLER DE ANALISIS Y PROGRAMACIÓN I/proyecto sistema sabanas/menu/nota_nueva.html">Nota
+                    Debito Credito v3</a>
                 <a href="/TALLER DE ANALISIS Y PROGRAMACIÓN I/proyecto sistema sabanas/menu/tabla_nota_remision.html">Nota
                     Remision</a>
             </div>
