Add HTML templates for Nota de Remisión and Notas de Crédito/Débito management
- Created ui_nota_remision_gestion.html for managing Nota de Remisión with filters, table, and modal for details.
- Created ui_notas_compra_gestion.html for managing Notas de Crédito/Débito with filters, table, and modal for details.
- Implemented JavaScript functionality for fetching data, searching, and displaying results in both templates.
- Added styles for improved UI/UX in both management pages.

--- a/proyecto sistema sabanas/menu/navbar.html
+++ b/proyecto sistema sabanas/menu/navbar.html
@@ -46,8 +46,13 @@
                     Debito Credito</a> -->
                 <a href="/TALLER DE ANALISIS Y PROGRAMACIÓN I/proyecto sistema sabanas/menu/nota_nueva.html">Nota
                     Debito Credito v3</a>
-                <a href="/TALLER DE ANALISIS Y PROGRAMACIÓN I/proyecto sistema sabanas/menu/tabla_nota_remision.html">Nota
-                    Remision</a>
+                <a href="/TALLER DE ANALISIS Y PROGRAMACIÓN I/proyecto sistema sabanas/menu/ui_notas_compra_gestion.html">Listar Nota debito credito v3</a>
+                <!-- <a href="/TALLER DE ANALISIS Y PROGRAMACIÓN I/proyecto sistema sabanas/menu/tabla_nota_remision.html">Nota
+                    Remision</a> -->
+                <a href="/TALLER DE ANALISIS Y PROGRAMACIÓN I/proyecto sistema sabanas/menu/ui_nota_remision.html">Nota
+                    Remision v3</a>
+                <a href="/TALLER DE ANALISIS Y PROGRAMACIÓN I/proyecto sistema sabanas/menu/ui_nota_remision_gestion.html">Lista Notas
+                    Remision v3</a>
             </div>
         </li>
         <li class="dropdown">
