Implementación de funcionalidades de cobro: - Creación de scripts para buscar cuotas y facturas pendientes. - Desarrollo de lógica para registrar cobros de cuotas y facturas múltiples. - Implementación de interfaz de usuario para gestionar cobros, incluyendo selección de medios de pago y validaciones. - Integración de manejo de errores y respuestas JSON para facilitar la comunicación con el frontend.

--- a/proyecto sistema sabanas/venta_v3/navbar/navbar.html
+++ b/proyecto sistema sabanas/venta_v3/navbar/navbar.html
@@ -1,34 +1,36 @@
 <nav class="navbar">
     <ul>
         <li><a style="color: aqua;"
-                href="/TALLER DE ANALISIS Y PROGRAMACIÓN I/proyecto sistema sabanas/mantenimiento_seguridad/dashboard/dashboard.php">Dash
+                href="/TALLER DE ANALISIS Y PROGRAMACIÓN I/proyecto sistema sabanas/mantenimiento_seguridad/dashboard/dashboardv1.php">Dash
                 Board</a></li>
         <li class="dropdown">
             <a href="#" class="dropbtn">Gestion de CAJA</a>
             <div class="dropdown-content">
-                <a href="../venta_v2/ui_apertura_cierre_caja.php">Apertura y Cierre de caja</a>
+                <!-- <a href="../venta_v2/ui_apertura_cierre_caja.php">Apertura y Cierre de caja</a> -->
             </div>
         </li>
         <li class="dropdown">
             <a href="#" class="dropbtn">Gestion de Ventas</a>
             <div class="dropdown-content">
-                <a href="../venta_v2/ui_facturacion.php">Facturacion</a>              
-                <a href="../venta_v2/ui_consulta_cuotas.php">Cuentas a cobrar</a>              
-                <a href="../venta_v2/ui_consultar_ventas.php">Consultar ventas</a>              
+                <a href="/TALLER DE ANALISIS Y PROGRAMACIÓN I/proyecto sistema sabanas/venta_v3/pedido/ui_pedido_nuevo.php">Nuevo pedido</a>              
+                <a href="/TALLER DE ANALISIS Y PROGRAMACIÓN I/proyecto sistema sabanas/venta_v3/pedido/ui_pedidos.php">Pedidos</a>              
+                <a href="/TALLER DE ANALISIS Y PROGRAMACIÓN I/proyecto sistema sabanas/venta_v3/ventas/ui_facturacion.php">Facturacion</a>              
+                <a href="/TALLER DE ANALISIS Y PROGRAMACIÓN I/proyecto sistema sabanas/venta_v3/cobros/ui_cobros.php">Cobros</a>              
+                <!-- <a href="../venta_v2/ui_consultar_ventas.php">Consultar ventas</a>               -->
             </div>
         </li>
         <li class="dropdown">
             <a href="#" class="dropbtn">Gestion de Notas</a>
             <div class="dropdown-content">
-                <a href="../venta_v2/ui_nota_remision_venta.php">Nota de Remisión</a>
-                <a href="../venta_v2/ui_nota_credito_debito.php">Notas de Créditos y Débitos</a>
+                <!-- <a href="../venta_v2/ui_nota_remision_venta.php">Nota de Remisión</a>
+                <a href="../venta_v2/ui_nota_credito_debito.php">Notas de Créditos y Débitos</a> -->
             </div>
            
         </li>
         <li class="dropdown">
             <a href="#" class="dropbtn">Gestion Libro de Ventas</a>
             <div class="dropdown-content">
-                <a href="../venta_v2/ui_consultar_libro_ventas.php">Consultar Libro de Ventas</a>
+                <!-- <a href="../venta_v2/ui_consultar_libro_ventas.php">Consultar Libro de Ventas</a> -->
             </div>
            
         </li>
@@ -47,6 +49,6 @@
                 <div class="p2_perfil" id="nombre-usuario">Cargando...</div>
             </a>
         </li>
-        <li><a href="cerrar_sesion.php" class="cerrar-sesion">Cerrar Sesión</a></li>
+        <li><a href="/TALLER DE ANALISIS Y PROGRAMACIÓN I/proyecto sistema sabanas/mantenimiento_seguridad/dashboard/logout.php" class="cerrar-sesion">Cerrar Sesión</a></li>
     </ul>
 </nav>
