feat: Implement invoice cancellation and printing features
- Updated the status of stock reservations from 'anulada' to 'cancelada' in pedido_anular.php.
- Enhanced productos_disponibles.php to ensure only active reservations are considered.
- Added anular_factura.php to handle the cancellation of issued invoices, including stock reversal and updating related records.
- Created factura_print.php for generating printable invoice views, including a watermark for canceled invoices.
- Developed factura_ver.php to normalize and redirect to the printable invoice view.
- Implemented listar_facturas.php for listing invoices with filters and pagination.
- Added ui_facturas.php for the user interface to manage invoices, including search and filter functionalities.

--- a/proyecto sistema sabanas/venta_v3/navbar/navbar.html
+++ b/proyecto sistema sabanas/venta_v3/navbar/navbar.html
@@ -15,6 +15,7 @@
                 <a href="/TALLER DE ANALISIS Y PROGRAMACIÓN I/proyecto sistema sabanas/venta_v3/pedido/ui_pedido_nuevo.php">Nuevo pedido</a>              
                 <a href="/TALLER DE ANALISIS Y PROGRAMACIÓN I/proyecto sistema sabanas/venta_v3/pedido/ui_pedidos.php">Pedidos</a>              
                 <a href="/TALLER DE ANALISIS Y PROGRAMACIÓN I/proyecto sistema sabanas/venta_v3/ventas/ui_facturacion.php">Facturacion</a>              
+                <a href="/TALLER DE ANALISIS Y PROGRAMACIÓN I/proyecto sistema sabanas/venta_v3/ventas/ui_facturas.php">Buscar facturas</a>              
                 <a href="/TALLER DE ANALISIS Y PROGRAMACIÓN I/proyecto sistema sabanas/venta_v3/cobros/ui_cobros.php">Cobros</a>              
                 <!-- <a href="../venta_v2/ui_consultar_ventas.php">Consultar ventas</a>               -->
             </div>
