--- a/proyecto sistema sabanas/venta_v3/navbar/navbar.html
+++ b/proyecto sistema sabanas/venta_v3/navbar/navbar.html
@@ -25,6 +25,8 @@
             <div class="dropdown-content">
                 <!-- <a href="../venta_v2/ui_nota_remision_venta.php">Nota de Remisión</a>
                 <a href="../venta_v2/ui_nota_credito_debito.php">Notas de Créditos y Débitos</a> -->
+                <a href="/TALLER DE ANALISIS Y PROGRAMACIÓN I/proyecto sistema sabanas/venta_v3/nota_remision/ui_remisiones.php">Nota de Remision</a>
+                <a href="/TALLER DE ANALISIS Y PROGRAMACIÓN I/proyecto sistema sabanas/venta_v3/nota_remision/ui_gestionar_remisiones.php">Gestion de Remision</a>
             </div>
            
         </li>
