Add UI for Caja Movements, Panel, and Recaudations
- Implemented `ui_movimientos.php` for listing caja movements with filters and pagination.
- Created `ui_panel.php` for displaying the current caja session with quick movement entry.
- Developed `ui_recaudaciones.php` for consolidating closed sessions and generating recauds.
- Added necessary SQL queries and HTML structure for each new UI component.
- Included JavaScript for handling movement registration and recaudation generation.

--- a/proyecto sistema sabanas/venta_v3/navbar/navbar.html
+++ b/proyecto sistema sabanas/venta_v3/navbar/navbar.html
@@ -7,6 +7,10 @@
             <a href="#" class="dropbtn">Gestion de CAJA</a>
             <div class="dropdown-content">
                 <!-- <a href="../venta_v2/ui_apertura_cierre_caja.php">Apertura y Cierre de caja</a> -->
+               <a href="/TALLER DE ANALISIS Y PROGRAMACIÓN I/proyecto sistema sabanas/venta_v3/caja/ui_abrir.php">abrir caja</a>
+               <a href="/TALLER DE ANALISIS Y PROGRAMACIÓN I/proyecto sistema sabanas/venta_v3/caja/ui_panel.php">Panel</a>
+               <a href="/TALLER DE ANALISIS Y PROGRAMACIÓN I/proyecto sistema sabanas/venta_v3/caja/ui_movimientos.php">Movimientos</a>
+               <a href="/TALLER DE ANALISIS Y PROGRAMACIÓN I/proyecto sistema sabanas/venta_v3/caja/ui_recaudaciones.php">Recaudaciones</a>
             </div>
         </li>
         <li class="dropdown">
