Add recaudacion_detalle and ui_recaudacion_historial pages; implement session checks and dynamic filtering for recaudation records

--- a/proyecto sistema sabanas/venta_v3/navbar/navbar.html
+++ b/proyecto sistema sabanas/venta_v3/navbar/navbar.html
@@ -11,6 +11,7 @@
                <a href="/TALLER DE ANALISIS Y PROGRAMACIÓN I/proyecto sistema sabanas/venta_v3/caja/ui_panel.php">Panel</a>
                <a href="/TALLER DE ANALISIS Y PROGRAMACIÓN I/proyecto sistema sabanas/venta_v3/caja/ui_movimientos.php">Movimientos</a>
                <a href="/TALLER DE ANALISIS Y PROGRAMACIÓN I/proyecto sistema sabanas/venta_v3/caja/ui_recaudaciones.php">Recaudaciones</a>
+               <a href="/TALLER DE ANALISIS Y PROGRAMACIÓN I/proyecto sistema sabanas/venta_v3/caja/ui_recaudacion_historial.php">Historial</a>
             </div>
         </li>
         <li class="dropdown">
