Implementar anulación de facturas con soporte para nuevas tablas y columnas; agregar funcionalidad para imprimir notas de crédito y débito, incluyendo búsqueda por cliente y fecha.

--- a/proyecto sistema sabanas/venta_v3/navbar/navbar.html
+++ b/proyecto sistema sabanas/venta_v3/navbar/navbar.html
@@ -33,6 +33,7 @@
                 <a href="/TALLER DE ANALISIS Y PROGRAMACIÓN I/proyecto sistema sabanas/venta_v3/nota_remision/ui_remisiones.php">Nota de Remision</a>
                 <a href="/TALLER DE ANALISIS Y PROGRAMACIÓN I/proyecto sistema sabanas/venta_v3/nota_remision/ui_gestionar_remisiones.php">Gestion de Remision</a>
                 <a href="/TALLER DE ANALISIS Y PROGRAMACIÓN I/proyecto sistema sabanas/venta_v3/notas/ui_notas_emitir.php">Nota Credito/Debito</a>
+                <a href="/TALLER DE ANALISIS Y PROGRAMACIÓN I/proyecto sistema sabanas/venta_v3/notas/ui_notas_print_buscar.php">BUSCAR Nota Credito/Debito</a>
             </div>
            
         </li>
