--- a/proyecto sistema sabanas/mantenimiento_seguridad/acceso/acceso.html
+++ b/proyecto sistema sabanas/mantenimiento_seguridad/acceso/acceso.html
@@ -4,35 +4,190 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Iniciar Sesión</title>
+    <title>Beauty Creations | Iniciar Sesión</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="../acceso/notificacion.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
     <style>
-        body {
-            height: 100vh;
-            /* Asegura que el fondo cubra toda la altura de la ventana */
-            background-image: url('../panel_usuario/iconosPerfil/trincaje-de-contenedores.jpg');
-            /* Cambia por la ruta de tu imagen */
-            background-size: cover;
-            /* Asegura que la imagen cubra todo el fondo */
-            background-position: center;
-            /* Centra la imagen */
-            background-repeat: no-repeat;
+        :root {
+            --bg-overlay: rgba(255, 255, 255, 0.55);
+            --card-bg: rgba(255, 255, 255, 0.72);
+            --accent: #d63384;
+            --accent-dark: #b0276b;
+            --text-main: #351421;
+            --text-muted: #9f607d;
+            --shadow-lg: 0 24px 48px rgba(53, 20, 33, 0.18);
+            --radius-card: 22px;
+        }
 
-            /* Evita que la imagen se repita */
-            .recuperacion-container {
-                margin-top: 10px;
-                text-align: center;
-            }
+        * {
+            box-sizing: border-box;
+        }
+
+        body {
+            margin: 0;
+            min-height: 100vh;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            padding: 32px 16px;
+            font-family: "Poppins", system-ui, -apple-system, Segoe UI, sans-serif;
+            color: var(--text-main);
+            background-image:
+                linear-gradient(120deg, rgba(241, 154, 200, 0.32), rgba(255, 235, 248, 0.55)),
+                url("../panel_usuario/iconosPerfil/trincaje-de-contenedores.jpg");
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+            position: relative;
+        }
+
+        body::before {
+            content: "";
+            position: fixed;
+            inset: 0;
+            background: var(--bg-overlay);
+            backdrop-filter: blur(6px);
+            z-index: 0;
+        }
+
+        .container {
+            position: relative;
+            z-index: 1;
+            width: min(420px, 100%);
+        }
+
+        .login-form {
+            background: var(--card-bg);
+            border-radius: var(--radius-card);
+            box-shadow: var(--shadow-lg);
+            padding: 42px 38px 36px;
+            display: flex;
+            flex-direction: column;
+            gap: 18px;
+            border: 1px solid rgba(214, 51, 132, 0.12);
+        }
+
+        .brand-badge {
+            display: inline-flex;
+            align-items: center;
+            gap: 10px;
+            margin-bottom: 6px;
+            color: var(--accent);
+            font-weight: 600;
+            text-transform: uppercase;
+            letter-spacing: 3px;
+            font-size: 0.78rem;
+        }
+
+        .brand-badge::before,
+        .brand-badge::after {
+            content: "";
+            width: 18px;
+            height: 1px;
+            background: currentColor;
+            opacity: 0.6;
+        }
+
+        .login-form h2 {
+            margin: 0;
+            font-family: "Playfair Display", "Poppins", serif;
+            font-size: 2rem;
+            font-weight: 600;
+            letter-spacing: 0.8px;
+        }
+
+        .login-form p {
+            margin: 0;
+            color: var(--text-muted);
+            font-size: 0.94rem;
+        }
+
+        .input-container {
+            display: flex;
+            flex-direction: column;
+            gap: 6px;
+        }
+
+        label {
+            font-size: 0.95rem;
+            font-weight: 500;
+            color: var(--text-main);
+        }
+
+        input {
+            border: 1px solid rgba(214, 51, 132, 0.2);
+            border-radius: 14px;
+            padding: 12px 14px;
+            font-size: 1rem;
+            background: rgba(255, 255, 255, 0.9);
+            transition: border-color 0.2s ease, box-shadow 0.2s ease;
+            color: var(--text-main);
+        }
+
+        input:focus {
+            outline: none;
+            border-color: rgba(214, 51, 132, 0.55);
+            box-shadow: 0 0 0 4px rgba(214, 51, 132, 0.18);
+        }
+
+        button {
+            margin-top: 6px;
+            border: none;
+            border-radius: 16px;
+            padding: 13px 16px;
+            font-size: 1rem;
+            font-weight: 600;
+            letter-spacing: 0.4px;
+            color: #fff;
+            cursor: pointer;
+            background: linear-gradient(135deg, #d63384, #f072c1);
+            transition: transform 0.2s ease, box-shadow 0.2s ease;
+            box-shadow: 0 14px 24px rgba(214, 51, 132, 0.28);
+        }
+
+        button:hover {
+            transform: translateY(-1px);
+            box-shadow: 0 18px 30px rgba(214, 51, 132, 0.3);
+        }
+
+        button:active {
+            transform: translateY(0);
+            box-shadow: 0 10px 20px rgba(214, 51, 132, 0.28);
+        }
+
+        .recuperacion-container {
+            margin-top: 18px;
+            text-align: center;
+            position: relative;
+            z-index: 1;
         }
 
         .recuperar-link {
-            color: #007bff;
+            color: var(--accent);
             text-decoration: none;
+            font-size: 0.95rem;
+            font-weight: 500;
         }
 
         .recuperar-link:hover {
             text-decoration: underline;
+        }
+
+        @media (max-width: 480px) {
+            body {
+                padding: 20px 12px;
+            }
+
+            .login-form {
+                padding: 32px 26px 28px;
+            }
+
+            .login-form h2 {
+                font-size: 1.75rem;
+            }
         }
     </style>
 </head>
@@ -40,19 +195,23 @@
 <body>
     <div class="container">
         <form class="login-form" id="loginForm" action="autenticacion.php" method="POST">
+            <span class="brand-badge">Beauty Creations</span>
             <h2>Iniciar Sesión</h2>
+            <p>Bienvenida a tu espacio de gestión. Ingresá tus datos para continuar.</p>
+
             <div class="input-container">
-                <label for="username">Usuario:</label>
-                <input type="text" id="username" name="username" required>
+                <label for="username">Usuario</label>
+                <input type="text" id="username" name="username" autocomplete="username" required>
             </div>
+
             <div class="input-container">
-                <label for="password">Contraseña:</label>
-                <input type="password" id="password" name="password" required>
+                <label for="password">Contraseña</label>
+                <input type="password" id="password" name="password" autocomplete="current-password" required>
             </div>
+
             <button type="submit">Ingresar</button>
         </form>
 
-        <!-- Enlace de recuperación de contraseña -->
         <div class="recuperacion-container">
             <a href="ui_recuperacion_contrasena.php" class="recuperar-link">¿Olvidaste tu contraseña?</a>
         </div>
@@ -62,12 +221,10 @@
 
     <script>
         document.getElementById('loginForm').addEventListener('submit', function (e) {
-            e.preventDefault(); // Evitar el envío del formulario
+            e.preventDefault();
 
-            // Crear un objeto FormData para capturar los datos del formulario
-            var formData = new FormData(this);
+            const formData = new FormData(this);
 
-            // Usar fetch para enviar la solicitud POST
             fetch('autenticacion.php', {
                 method: 'POST',
                 body: formData
@@ -76,27 +233,25 @@
                     if (!response.ok) {
                         throw new Error("Error en la conexión");
                     }
-                    return response.json(); // Parsear la respuesta JSON
+                    return response.json();
                 })
                 .then(data => {
                     if (data.mensaje) {
-                        mostrarNotificacion(data.mensaje); // Llama a tu función de notificación
+                        mostrarNotificacion(data.mensaje);
                     }
-                    // Si el inicio de sesión es exitoso, redirigir
                     if (data.success && data.redirect) {
                         setTimeout(() => {
-                            window.location.href = data.redirect; // Cambia a la página deseada
+                            window.location.href = data.redirect;
                         }, 2000);
                     }
                 })
                 .catch(error => {
-                    mostrarNotificacion(error.message); // Mostrar error si ocurre
+                    mostrarNotificacion(error.message);
                 });
         });
     </script>
 
     <script src="../acceso/notificacion.js"></script>
-
 </body>
 
 </html>
