ajuste de gestion reserva

--- a/proyecto sistema sabanas/servicios/navbar/navbar.html
+++ b/proyecto sistema sabanas/servicios/navbar/navbar.html
@@ -13,6 +13,9 @@
         <a href="/TALLER DE ANALISIS Y PROGRAMACIÓN I/proyecto sistema sabanas/servicios/orden_reserva/ui_reserva.php">
           Reservas
         </a>
+        <a href="/TALLER DE ANALISIS Y PROGRAMACIÓN I/proyecto sistema sabanas/servicios/orden_reserva/agenda_reservas.php">
+          Gestion Reserva
+        </a>
         <a href="/TALLER DE ANALISIS Y PROGRAMACIÓN I/proyecto sistema sabanas/servicios/ot/ui_ot.php">
           Órdenes de Trabajo
         </a>
